# gnome-shell-extension-islamic-datetime

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  extension.js  islamic-datetime-config  metadata.json  org.gnome.shell.extensions.islamic-datetime.gschema.xml  prefs.js  stylesheet.css
po/: Makefile  POTFILES.in  ar.po  islamic-datetime.pot
schemas/: org.gnome.shell.extensions.islamic-datetime.gschema.xml
src/: Makefile.am  extension.js  islamic-datetime-config  metadata.json  prefs.js  stylesheet.css
src/schemas/: org.gnome.shell.extensions.islamic-datetime.gschema.xml
